overflow fixes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,8 +6,6 @@ html, body {
   font-family: "SF-Pro", sans-serif;
   background-color: $base;
   overflow-x: hidden;
-  overflow-y: hidden;
-  overflow: hidden;
 };
 
 @font-face {
